@@ -174,6 +174,18 @@ mpd_send_float_command(struct mpd_connection *connection, const char *command,
 }
 
 bool
+mpd_send_u_f_command(struct mpd_connection *connection, const char *command,
+		     unsigned arg1, float arg2)
+{
+	char arg1_string[INTLEN], arg2_string[INTLEN];
+
+	snprintf(arg1_string, sizeof(arg1_string), "%u", arg1);
+	snprintf(arg2_string, sizeof(arg2_string), "%.3f", arg2);
+	return mpd_send_command(connection, command,
+				arg1_string, arg2_string, NULL);
+}
+
+bool
 mpd_send_u_s_command(struct mpd_connection *connection, const char *command,
 		     unsigned arg1, const char *arg2)
 {
